# hmm

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
backtest/: engine.py
data/: features.py  feed.py  geo_events.py
execution/: risk_manager.py
models/: hmm_regimes.py  patterns.py  wyckoff.py
notebooks/: 01_hmm_btc_vs_gold_eda.ipynb
strategies/: core_strategy.py  inefficiencies.py
tests/: test_core.py
