[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hmm-trading"
version = "0.1.0"
description = "Quantitative trading bot: HMM regime detection + Wyckoff + geopolitical alpha on BTC/XAUUSD"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nicots85" }]

dependencies = [
    # Data & async
    "aiohttp>=3.9.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "pyarrow>=15.0.0",

    # Market data
    "ccxt>=4.3.0",
    "yfinance>=0.2.38",

    # Feature engineering & stats
    "scipy>=1.13.0",
    "scikit-learn>=1.4.2",
    "ta-lib>=0.4.28",            # ATR, volatility indicators
    "pandas-ta>=0.3.14b0",       # fallback if ta-lib not available

    # HMM
    "hmmlearn>=0.3.2",

    # Backtesting
    "vectorbt>=0.26.2",

    # NLP / sentiment (geopolitical module)
    "transformers>=4.40.0",
    "torch>=2.2.2",              # CPU-only; override in prod with +cu121
    "feedparser>=6.0.11",        # RSS ingestion

    # Visualisation
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "plotly>=5.22.0",

    # Validation & config
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",

    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "hypothesis>=6.100.0",
]

[project.optional-dependencies]
dev = ["black>=24.4.2", "ruff>=0.4.4", "mypy>=1.10.0", "ipykernel>=6.29.4"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
